# parastart

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.devcontainer/scripts/: drop_connections.sql
.github/workflows/: cd.yml
crates/scraper/: Cargo.toml
crates/scraper/resources/: country_160.kml
crates/scraper/src/: main.rs  parse_kml.rs  scrape_web.rs
crates/server/: Cargo.toml
crates/server/.sqlx/: query-0e8f1d6454d2a82c247a21cd7e6fa14f9fa4d270fe77c04137817e4c8707cf9a.json  query-1b6020c02a15400f6522e037016f0136b1e2f392fefb73b5f7924e48385ce78b.json  query-35f59b62cbcabf7a91d9a7733fa1bd098b8c83d5c8a8ea02e62a4ed4ca4265f6.json  query-3f4381bec5f676f0f34b1711019d3914a2e829f6e2aeaa5ec5f06de6431c882f.json  query-53785441319f5665e3cacfea04dc4808d3b14153b226df9670a2122dc2173dab.json  query-640bae876e6c8e084f41dbbe6b9a8a391f0f332a6e813e86e030b51ccc06127f.json  query-9c2364567f39112833ef086692b423b34447327e01d446ae38ad5c9e3efb67a7.json  query-a4c4e02231acef53eef933a4d0a85934d3fc0a454c5a6749c15d25c5de8e1046.json  query-ac7a7d24d73079ea258549c67a0f122d6d85839c10f4c8ee0836589b293b82cb.json  query-b3f519a0e6ee9bbeeb47cead99cec1359102e9ec5e7cf4875f5ac3388d57ff64.json  query-e2f0c87eb2cc91c2f38649c8c5deb977b2a1bda6181b1fbfee6036907c68f1ed.json
crates/server/src/: lib.rs  main.rs
crates/server/src/database/: auth.rs  connection.rs  helpers.rs  mod.rs  models.rs  pool.rs
crates/server/src/database/migrations/: 0001_initial.sql
crates/server/src/error/: mod.rs
crates/server/src/handler/: root.rs
crates/server/src/migrations/: 0001_initial.sql
crates/server/src/models/: mod.rs  takeoff.rs
crates/server/src/routers/api/: health.rs  mod.rs  takeoffs.rs  users.rs  version.rs
crates/server/src/routers/default/: mod.rs  root.rs
crates/www/: index.html
crates/www/global/: global.css  global.js
crates/www/pages/: about.html  home.html  list.html  map.html  takeoff.html
crates/www/scripts/: global.js  list.js  map.js  takeoff.js
crates/www/styles/: global.css  index.css  list.css  map.css  takeoff.css
crates/www/takeoff/: index.html  takeoff.css  takeoff.js
