[workspace]
members = ["crates/*"]
exclude = ["crates/www"]
default-members = ["crates/server"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
repository = "https://github.com/jonassterud/parastart"
edition = "2021"
rust-version = "1.79"

[workspace.dependencies]
tokio = { version = "1.38" }
futures = { version = "0.3" }
serde = { version = "1.0" }
anyhow = { version = "1.0" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
sqlx = { version = "0.7" }
