[package]
name = "server"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "server_lib"
crate-type = ["lib"]

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true, features = [] }
tracing = { workspace = true, features = [] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "any", "postgres"] }
axum = { version = "0.7", features = ["tracing", "json", "macros"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
rand = { version = "0.8", features = [] }
rand_chacha = { version = "0.3", features = [] }
bcrypt = { version = "0.15", features = [] }
